--- a/09:03:2022_html/index.html
+++ b/09:03:2022_html/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Key Travel</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--- nav-bar --->
+    <div id="nav-bar">
+        <div class="logo">
+            <img src="https://keytravel.com/static/kt-logo.svg">
+        </div>
+        <div class="menu">
+            <a href="#">about us</a>
+            <a href="#">travel with us</a>
+            <a href="#">get in touch</a>
+        </div>
+        <div class="menu-right">
+            <a href="#">travel enquiry</a>
+        </div>
+        <button>Sign In</button>
+        
+    </div>
     
 </body>
 </html>
